[package]
name = "booko-backend"
version = "0.1.0"
authors = ["Tim Kennedy <t.m.knndy@gmail.com>"]

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
rocket_contrib = "0.3.16"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["sqlite", "r2d2"] }
dotenv = "0.9.0"